# WeylandTavern-Launcher

./: .env  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENT_OVERVIEW.md  Update-Weyland.bat  agent_nav.json
.github/workflows/: ci.yml
Launcher/: .env  AGENT_OVERVIEW.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Launcher/src/: AGENTS.md  App.tsx
Launcher/src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
Launcher/src-tauri/src/: AGENTS.md  main.rs
tools/: AGENTS.md  Update-WeylandTavern.ps1
