[package]
name = "weylandtavern-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
dotenvy = "0.15"
tokio = { version = "1", features = ["process", "io-util", "macros", "signal", "time"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4" }
serde = { version = "1", features = ["derive"] }


[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
